--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
   <div class="main-bg">
     <header class="header">
-      <div class="container-fluid">
+      <div class="container-fluide">
         <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Counsel"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,7 +74,7 @@
       </div>  
     </header>
     <section class="banner">
-      <div class="container-fluid">
+      <div class="container-fluide">
         <div class="banner-slide">
           <div class="row">
             <div class="col">
@@ -97,23 +97,25 @@
   </div>
 
   <section class="about">
-    <div class="container-fluid">
+    <div class="container-fluide">
       <div class="row">
-        <div class="col">
+        <div class="col-6">
           <h2 class="title">Take away the risk & you can do anything.</h2>
           <p class="subtitle">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
           <p class="text">Integer blandit ultricies aliquam. Pellentesque quis dui varius, dapibus velit id, iaculis ipsum. Morbi ac eros feugiat, lacinia elit ut, elem turpis.Curabitur justo sapien, tempus sit amet rutrum eu, commodo eu lacus. Morbi in ligula nibh. Maecenas ut mi at odio hendrerit eleifend tempor.justo sapien, tempus </p>
           <a href="#" class="link">Take a Tour</a>
         </div>
         <div class="col">
-          <img src="../img/picture.png" alt="people" class="about__img">
+          <div class="col-img col-img_yellow col-img-right">
+            <p class="col-img__p"><img src="../img/picture.png" alt="people" class="about__img"></p>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
   <section class="about about_gray">
-    <div class="container-fluid">
+    <div class="container-fluide">
       <div class="row">
         <div class="col">
           <img src="../img/graph.png" alt="graph" class="about__img--gray">
@@ -129,7 +131,7 @@
   </section>
 
   <section class="block block_blue">
-    <div class="container-fluid">
+    <div class="container-fluide">
       <div class="row justify-content-between">
         <div class="col">
           <p class="block__text">Looking for a First-Class Business Plan Consultant?</p>
@@ -142,7 +144,7 @@
   </section>
 
   <section class="services text-center">
-    <div class="container-fluid">
+    <div class="container-fluide">
       <h2 class="title">Popular Services</h2>
       <p class="subtitle">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
       <div class="row text-left">
@@ -166,25 +168,21 @@
   </section>
 
   <section class="block block_bg text-center">
-    <div class="container-fluid">
+    <div class="container-fluide">
       <div class="row">
-        <col>
-          <p class="data"><span>7890</span>Coffee cups</p>
-        <col>
-          <p class="data"><span>1 M</span>Subscribers</p>
-        <col>
-          <p class="data"><span>1509</span>Customers</p>
-        <col>
-          <p class="data"><span>5972</span>Purchases</p>
+        <div class="col"><p class="data"><span>7890</span>Coffee cups</p></div>
+        <div class="col"><p class="data"><span>1 M</span>Subscribers</p></div>
+        <div class="col"><p class="data"><span>1509</span>Customers</p></div>
+        <div class="col"><p class="data"><span>5972</span>Purchases</p></div>
       </div>
     </div>
   </section>
 
   <section class="about">
-    <div class="container-fluid">
+    <div class="container-fluide">
         <div class="row">
-          <div class="col">
-            <a href=""><img src="../img/video.png" alt="people" class="about__img"></a>
+          <div class="col col-img_yellow col-img-left">
+            <p class="col-img__p"><a href=""><img src="../img/video.png" alt="people" class="about__img"></a></p>
           </div>
           <div class="col">
             <h2 class="title">Why  we best Consulting office in london ?</h2>
@@ -197,7 +195,7 @@
   </section>
 
   <section class="review text-center">
-    <div class="container-fluid">
+    <div class="container-fluide">
       <div class="review__pic"></div>
       <p class="review__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit Seddo eiusmod tempor incididunt ut labore Standard Dummy aliqua. Utenim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut Unknown Printer The Commodo consequat. Duis aute irure dolor. Voluptate velit esse cillum dolore eu fugiat nullapariatur.</p>   
       <p class="review__author">SAM ISBISTER</p>
@@ -205,7 +203,7 @@
   </section>
 
   <section class="block-addres text-center">
-    <div class="container-fluid">
+    <div class="container-fluide">
       <h2 class="title">Contact with us</h2>
       <p class="subtitle">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
       <div class="row text-left">
@@ -237,7 +235,7 @@
   </section>
 
   <footer class="footer block_blue">
-    <div class="container-fluid">
+    <div class="container-fluide">
       <div class="row">
         <div class="col">
           <p class="copyright">Copyright © Consul</p>
