Доработала блоки по 6 уроку

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
   <section class="block block_blue">
     <div class="container-fluide">
-      <div class="row justify-content-between">
+      <div class="row align-items-center">
         <div class="col">
           <p class="block__text">Looking for a First-Class Business Plan Consultant?</p>
         </div>
@@ -171,7 +171,7 @@
     <div class="container-fluide">
       <div class="row">
         <div class="col"><p class="data"><span>7890</span>Coffee cups</p></div>
-        <div class="col"><p class="data"><span>1 M</span>Subscribers</p></div>
+        <div class="col"><p class="data"><span>1M</span>Subscribers</p></div>
         <div class="col"><p class="data"><span>1509</span>Customers</p></div>
         <div class="col"><p class="data"><span>5972</span>Purchases</p></div>
       </div>
@@ -197,7 +197,7 @@
   <section class="review text-center">
     <div class="container-fluide">
       <div class="review__pic"></div>
-      <p class="review__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit Seddo eiusmod tempor incididunt ut labore Standard Dummy aliqua. Utenim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut Unknown Printer The Commodo consequat. Duis aute irure dolor. Voluptate velit esse cillum dolore eu fugiat nullapariatur.</p>   
+      <p class="review__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit Seddo eiusmod tempor incididunt ut labore Standard Dummy aliqua. Utenim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut Unknown Printer The Commodo consequat. Duis aute irure dolor. Voluptate velit esse cillum dolore eu fugiat nullapariatur.</p>  
       <p class="review__author">SAM ISBISTER</p>
     </div>
   </section>
