Загрузила файлы для проверки

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <link rel="icon" type="image/png" href="img/favicons/favicons192.png" sizes="192x192">
   <link rel="icon" type="image/png" href="img/favicons/favicons96.png" sizes="96x96">
   <link rel="icon" type="image/png" href="img/favicons/favicons16.png" sizes="16x16">
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
   <!-- Main styles CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -35,7 +37,8 @@
 </head>
 
 <body>
-  <div class="main-bg">
+  <div class="main-bg"></div>
+  <div class="main">
     <header class="header">
       <div class="container-fluide">
         <nav class="navbar navbar-expand-lg">
@@ -95,91 +98,91 @@
       </div>
     </section>
   </div>
-
-  <section class="about">
-    <div class="container-fluide">
-      <div class="row">
-        <div class="col-6">
-          <h2 class="title">Take away the risk & you can do anything.</h2>
-          <p class="subtitle">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
-          <p class="text">Integer blandit ultricies aliquam. Pellentesque quis dui varius, dapibus velit id, iaculis ipsum. Morbi ac eros feugiat, lacinia elit ut, elem turpis.Curabitur justo sapien, tempus sit amet rutrum eu, commodo eu lacus. Morbi in ligula nibh. Maecenas ut mi at odio hendrerit eleifend tempor.justo sapien, tempus </p>
-          <a href="#" class="link">Take a Tour</a>
-        </div>
-        <div class="col">
-          <div class="col-img col-img_yellow col-img-right">
-            <p class="col-img__p"><img src="../img/picture.png" alt="people" class="about__img"></p>
+  <div class="layot">
+    <section class="about">
+      <div class="container-fluide">
+        <div class="row">
+          <div class="col-6">
+            <h2 class="title">Take away the risk & you can do anything.</h2>
+            <p class="subtitle">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
+            <p class="text">Integer blandit ultricies aliquam. Pellentesque quis dui varius, dapibus velit id, iaculis ipsum. Morbi ac eros feugiat, lacinia elit ut, elem turpis.Curabitur justo sapien, tempus sit amet rutrum eu, commodo eu lacus. Morbi in ligula nibh. Maecenas ut mi at odio hendrerit eleifend tempor.justo sapien, tempus </p>
+            <a href="#" class="link">Take a Tour</a>
+          </div>
+          <div class="col">
+            <div class="col-img col-img_yellow col-img-right">
+              <p class="col-img__p"><img src="../img/picture.png" alt="people" class="about__img"></p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-
-  <section class="about about_gray">
-    <div class="container-fluide">
-      <div class="row">
-        <div class="col">
-          <img src="../img/graph.png" alt="graph" class="about__img--gray">
-        </div>
-        <div class="col">
-          <h2 class="title">Constructingthe  best in class global assets.</h2>
-          <p class="subtitle">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
-          <p class="text">Integer blandit ultricies aliquam. Pellentesque quis dui varius, dapibus velit id, iaculis ipsum. Morbi ac eros feugiat, lacinia elit ut, elementum turpis.Curabitur justo sapien, tempus sit amet rutrum eu, commodo eu lacus. Morbi in ligula nibh. Maecenas ut mi at odio hendrerit eleifend tempor.Integer blandit ultricies aliquam. Pellentesque quis dui varius, dapibus velit id, iaculis ipsum. Morbi ac eros feugiat, lacinia elit ut, elementum turpis.Curabitur justo sapien, tempus sit amet rutrum eu, commodo eu lacus. Morbi in ligula nibh. Maecenas ut mi at odio hendrerit eleifend tempor.Morbi ac eros feugiat, lacinia elit ut, elementum turpis.Curabitur justo sapien, tempus sit amet rutrum eu, commodo eu lacus. nibh. Maecenas ut mi at odio hendrerit eleifend tempor.Integer blandit ultricies Morbi in ligula nibh.</p>
-          <a href="#" class="link">Take a Tour</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="block block_blue">
-    <div class="container-fluide">
-      <div class="row align-items-center">
-        <div class="col">
-          <p class="block__text">Looking for a First-Class Business Plan Consultant?</p>
-        </div>
-        <div class="col">
-          <a href="#" type="button" class="btn" data-toggle="modal" data-target="#ModalContact">Contact Now</a>
+    </section>
+  
+    <section class="about about_gray">
+      <div class="container-fluide">
+        <div class="row">
+          <div class="col">
+            <img src="../img/graph.png" alt="graph" class="about__img--gray">
+          </div>
+          <div class="col">
+            <h2 class="title">Constructingthe  best in class global assets.</h2>
+            <p class="subtitle">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
+            <p class="text">Integer blandit ultricies aliquam. Pellentesque quis dui varius, dapibus velit id, iaculis ipsum. Morbi ac eros feugiat, lacinia elit ut, elementum turpis.Curabitur justo sapien, tempus sit amet rutrum eu, commodo eu lacus. Morbi in ligula nibh. Maecenas ut mi at odio hendrerit eleifend tempor.Integer blandit ultricies aliquam. Pellentesque quis dui varius, dapibus velit id, iaculis ipsum. Morbi ac eros feugiat, lacinia elit ut, elementum turpis.Curabitur justo sapien, tempus sit amet rutrum eu, commodo eu lacus. Morbi in ligula nibh. Maecenas ut mi at odio hendrerit eleifend tempor.Morbi ac eros feugiat, lacinia elit ut, elementum turpis.Curabitur justo sapien, tempus sit amet rutrum eu, commodo eu lacus. nibh. Maecenas ut mi at odio hendrerit eleifend tempor.Integer blandit ultricies Morbi in ligula nibh.</p>
+            <a href="#" class="link">Take a Tour</a>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-
-  <section class="services text-center">
-    <div class="container-fluide">
-      <h2 class="title">Popular Services</h2>
-      <p class="subtitle">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
-      <div class="row text-left">
-        <div class="col-4">
-          <img src="img/workplace.png" alt="student company">
-          <h3 class="services__title">Turnaround Consulting</h3>
-          <p class="text">Companies dislike the term ‘turnaround consulting’ because it represents failure. The truth is that turnaround consulting represents success.</p>
-        </div>
-        <div class="col-4">
-          <img src="img/student.png" alt="student">
-          <h3 class="services__title">Bonds & Commodities</h3>
-          <p class="text">Companies dislike the term ‘turnaround consulting’ because it represents failure. The truth is that turnaround consulting represents success.</p>
-        </div>
-        <div class="col-4">
-          <img src="img/meeting.png" alt="conversation">
-          <h3 class="services__title">Audit & Assurance</h3>
-          <p class="text">Companies dislike the term ‘turnaround consulting’ because it represents failure. The truth is that turnaround consulting represents success.</p>
+    </section>
+  
+    <section class="block block_blue">
+      <div class="container-fluide">
+        <div class="row align-items-center">
+          <div class="col">
+            <p class="block__text">Looking for a First-Class Business Plan Consultant?</p>
+          </div>
+          <div class="col col-form">
+            <a href="#" type="button" class="btn" data-toggle="modal" data-target="#ModalContact">Contact Now</a>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-
-  <section class="block block_bg text-center">
-    <div class="container-fluide">
-      <div class="row">
-        <div class="col"><p class="data"><span>7890</span>Coffee cups</p></div>
-        <div class="col"><p class="data"><span>1M</span>Subscribers</p></div>
-        <div class="col"><p class="data"><span>1509</span>Customers</p></div>
-        <div class="col"><p class="data"><span>5972</span>Purchases</p></div>
+    </section>
+  
+    <section class="services text-center">
+      <div class="container-fluide">
+        <h2 class="title">Popular Services</h2>
+        <p class="subtitle subtitle_center">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
+        <div class="row text-left">
+          <div class="col-4">
+            <img src="img/workplace.png" alt="student company">
+            <h3 class="services__title">Turnaround Consulting</h3>
+            <p class="text">Companies dislike the term ‘turnaround consulting’ because it represents failure. The truth is that turnaround consulting represents success.</p>
+          </div>
+          <div class="col-4">
+            <img src="img/student.png" alt="student">
+            <h3 class="services__title">Bonds & Commodities</h3>
+            <p class="text">Companies dislike the term ‘turnaround consulting’ because it represents failure. The truth is that turnaround consulting represents success.</p>
+          </div>
+          <div class="col-4">
+            <img src="img/meeting.png" alt="conversation">
+            <h3 class="services__title">Audit & Assurance</h3>
+            <p class="text">Companies dislike the term ‘turnaround consulting’ because it represents failure. The truth is that turnaround consulting represents success.</p>
+          </div>
+        </div>
       </div>
-    </div>
-  </section>
-
-  <section class="about">
-    <div class="container-fluide">
+    </section>
+  
+    <section class="block block_bg text-center">
+      <div class="container-fluide">
+        <div class="row">
+          <div class="col"><p class="data"><span>7890</span>Coffee cups</p></div>
+          <div class="col"><p class="data"><span>1M</span>Subscribers</p></div>
+          <div class="col"><p class="data"><span>1509</span>Customers</p></div>
+          <div class="col"><p class="data"><span>5972</span>Purchases</p></div>
+        </div>
+      </div>
+    </section>
+  
+    <section class="about">
+      <div class="container-fluide">
         <div class="row">
           <div class="col col-img_yellow col-img-left">
             <p class="col-img__p"><a href=""><img src="../img/video.png" alt="people" class="about__img"></a></p>
@@ -192,65 +195,91 @@
           </div>
         </div>
       </div>
-  </section>
-
-  <section class="review text-center">
-    <div class="container-fluide">
-      <div class="review__pic"></div>
-      <p class="review__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit Seddo eiusmod tempor incididunt ut labore Standard Dummy aliqua. Utenim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut Unknown Printer The Commodo consequat. Duis aute irure dolor. Voluptate velit esse cillum dolore eu fugiat nullapariatur.</p>  
-      <p class="review__author">SAM ISBISTER</p>
-    </div>
-  </section>
-
-  <section class="block-addres text-center">
-    <div class="container-fluide">
-      <h2 class="title">Contact with us</h2>
-      <p class="subtitle">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
-      <div class="row text-left">
-        <div class="col">
-          <h3 class="block-addres__title">Head Quarter</h3>
-          <ul class="block-addres__list">
-            <li class="block-addres__item">14 Mao Road, N1 4EP, Los Angelos, USA</li>
-            <li class="block-addres__item">+445 6231 411 Los Angelos, USA</li>
-            <li class="block-addres__item">+445 6231 411 Los Angelos, USA</li>
-          </ul>
-        </div>
-        <div class="col">
-          <h3 class="block-addres__title">California office</h3>
-          <ul class="block-addres__list">
-            <li class="block-addres__item">14 Mao Road, N1 4EP, Los Angelos, USA</li>
-            <li class="block-addres__item">+445 6231 411 Los Angelos, USA</li>
-            <li class="block-addres__item">+445 6231 411 Los Angelos, USA</li>
-          </ul>
-        </div>
-        <div class="col">
-          <h3 class="block-addres__title">London office</h3>
-          <ul class="block-addres__list">
-            <li class="block-addres__item">14 Mao Road, N1 4EP, Los Angelos, USA</li>
-            <li class="block-addres__item">+445 6231 411 Los Angelos, USA</li>
-            <li class="block-addres__item">+445 6231 411 Los Angelos, USA</li>
-          </ul>
-        </div>
-    </div>
-  </section>
-
-  <footer class="footer block_blue">
-    <div class="container-fluide">
-      <div class="row">
-        <div class="col">
-          <p class="copyright">Copyright © Consul</p>
-        </div>
-        <div class="col">
-          <ul class="social-icons__list">
-            <li class="social-icons__item"><a href="#" target="_blank"></a></li>
-            <li class="social-icons__item"><a href="#" target="_blank"></a></li>
-            <li class="social-icons__item"><a href="#" target="_blank"></a></li>
-            <li class="social-icons__item"><a href="#" target="_blank"></a></li>
-          </ul>
+    </section>
+  
+    <section class="review">
+      <div class="container-fluide">
+        <div class="review__block text-center">
+          <div>
+            <div class="review__pic"></div>
+            <p class="review__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit Seddo eiusmod tempor incididunt ut labore Standard Dummy aliqua. Utenim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut Unknown Printer The Commodo consequat. Duis aute irure dolor. Voluptate velit esse cillum dolore eu fugiat nullapariatur.</p>  
+            <p class="review__author">SAM ISBISTER</p>
+          </div>
+          <div>
+            <div class="review__pic"></div>
+            <p class="review__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit Seddo eiusmod tempor incididunt ut labore Standard Dummy aliqua. Utenim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut Unknown Printer The Commodo consequat. Duis aute irure dolor. Voluptate velit esse cillum dolore eu fugiat nullapariatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit Seddo eiusmod tempor incididunt ut labore Standard Dummy aliqua. Utenim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut Unknown Printer The Commodo consequat. Duis aute irure dolor. Voluptate velit esse cillum dolore eu fugiat nullapariatur.</p>  
+            <p class="review__author">SAM ISBISTER</p>
+          </div>
+          <div>
+            <div class="review__pic"></div>
+            <p class="review__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit Seddo eiusmod tempor incididunt ut labore Standard Dummy aliqua. Utenim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut Unknown Printer The Commodo consequat. Duis aute irure dolor. Voluptate velit esse cillum dolore eu fugiat nullapariatur.</p>  
+            <p class="review__author">SAM ISBISTER</p>
+          </div>
+        </div>  
+      </div>
+    </section>
+  
+    <section class="block-addres text-center">
+      <div class="container-fluide">
+        <h2 class="title">Contact with us</h2>
+        <p class="subtitle subtitle_center">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
+        <div class="row text-left">
+          <div class="col">
+            <div class="col_shadow">
+              <div id="mapOne" style="width:100%; height:240px"></div>
+              <h3 class="block-addres__title">Head Quarter</h3>
+              <ul class="block-addres__list">
+                <li class="block-addres__item block-addres__item_nav">14 Mao Road, N1 4EP, Los Angelos, USA</li>
+                <li class="block-addres__item block-addres__item_phone">+445 6231 411</li>
+                <li class="block-addres__item block-addres__item_email">+445 6231 411</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col_shadow">
+              <div id="mapTwo" style="width:100%; height:240px"></div>
+              <h3 class="block-addres__title">California office</h3>
+              <ul class="block-addres__list">
+                <li class="block-addres__item block-addres__item_nav">14 Mao Road, N1 4EP, Los Angelos, USA</li>
+                <li class="block-addres__item block-addres__item_phone">+445 6231 411</li>
+                <li class="block-addres__item block-addres__item_email">+445 6231 411</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col_shadow">
+              <div id="mapThree" style="width:100%; height:240px"></div>
+              <h3 class="block-addres__title">London office</h3>
+              <ul class="block-addres__list">
+                <li class="block-addres__item block-addres__item_nav">14 Mao Road, N1 4EP, Los Angelos, USA</li>
+                <li class="block-addres__item block-addres__item_phone">+445 6231 411</li>
+                <li class="block-addres__item block-addres__item_email">+445 6231 411</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </section>  
+    
+    <footer class="footer block_blue">
+      <div class="container-fluide">
+        <div class="row justify-content-between">
+          <div class="col">
+            <p class="copyright">Copyright © <a href="index.html"> Consul</a></p>
+          </div>
+          <div class="col col-social">
+            <ul class="social-icons__list">
+              <li class="social-icons__item"><a href="#" target="_blank" class="social-icons__link social-icons__link_fb"></a></li>
+              <li class="social-icons__item"><a href="#" target="_blank" class="social-icons__link social-icons__link_tw"></a></li>
+              <li class="social-icons__item"><a href="#" target="_blank" class="social-icons__link social-icons__link_google"></a></li>
+              <li class="social-icons__item"><a href="#" target="_blank" class="social-icons__link social-icons__link_inst"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </div>
+
   <!-- Modal Contact -->
   <div class="modal fade" id="ModalContact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -275,10 +304,14 @@
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="js/bootstrap.min.js"></script>
   <!-- Scripts -->
+  <script src="https://api-maps.yandex.ru/2.1/?lang=en_US&amp;apikey=<ваш API-ключ>" type="text/javascript"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/jquery-1.11.2.min.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script>
 </body>
 
 </html>
