--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <link rel="icon" type="image/png" href="img/favicons/favicons192.png" sizes="192x192">
   <link rel="icon" type="image/png" href="img/favicons/favicons96.png" sizes="96x96">
   <link rel="icon" type="image/png" href="img/favicons/favicons16.png" sizes="16x16">
-  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick/slick-theme.css"/>
 
   <!-- Main styles CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -311,7 +311,7 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/jquery-1.11.2.min.js"></script>
-  <script type="text/javascript" src="slick/slick.min.js"></script>
+  <script type="text/javascript" src="slick/slick/slick.min.js"></script>
 </body>
 
 </html>
