--- a/index.html
+++ b/index.html
@@ -208,12 +208,12 @@
           <div>
             <div class="review__pic"></div>
             <p class="review__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit Seddo eiusmod tempor incididunt ut labore Standard Dummy aliqua. Utenim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut Unknown Printer The Commodo consequat. Duis aute irure dolor. Voluptate velit esse cillum dolore eu fugiat nullapariatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit Seddo eiusmod tempor incididunt ut labore Standard Dummy aliqua. Utenim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut Unknown Printer The Commodo consequat. Duis aute irure dolor. Voluptate velit esse cillum dolore eu fugiat nullapariatur.</p>  
-            <p class="review__author">SAM ISBISTER</p>
+            <p class="review__author">KATE HIDDEN</p>
           </div>
           <div>
             <div class="review__pic"></div>
             <p class="review__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit Seddo eiusmod tempor incididunt ut labore Standard Dummy aliqua. Utenim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut Unknown Printer The Commodo consequat. Duis aute irure dolor. Voluptate velit esse cillum dolore eu fugiat nullapariatur.</p>  
-            <p class="review__author">SAM ISBISTER</p>
+            <p class="review__author">CARL SMIT</p>
           </div>
         </div>  
       </div>
@@ -267,7 +267,7 @@
           <div class="col">
             <p class="copyright">Copyright © <a href="index.html"> Consul</a></p>
           </div>
-          <div class="col col-social">
+          <div class="col social-icons">
             <ul class="social-icons__list">
               <li class="social-icons__item"><a href="#" target="_blank" class="social-icons__link social-icons__link_fb"></a></li>
               <li class="social-icons__item"><a href="#" target="_blank" class="social-icons__link social-icons__link_tw"></a></li>
@@ -309,9 +309,8 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="slick/slick/slick.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
