--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle dropdown-toggle_english" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span></span></a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="#">Russian</a>
                   <a class="dropdown-item" href="#">Deutsch</a>
                   <a class="dropdown-item" href="#">French</a>
