Добавила svg рамку в слайдере

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
       <div class="carousel-item carousel-item-1 active">
         <div class="container-fluide">
           <div class="carousel-content float-right">
+            <svg class="carousel-content__svg" width="300" height="378">
+              <polyline points="10,90 10,10 290,10 290,368, 10,368 10,368, 10,368 10,310" fill="none" stroke="#fde428" stroke-width="10" />
+              <polyline points="10,270 10,240" fill="none" stroke="#fde428" stroke-width="10" />
+            </svg>
             <div class="carousel__bord"></div>
             <div class="carousel__rect"></div>
             <h1 class="carousel-content__title">Consumer Products Consulting</h1>
@@ -90,6 +94,10 @@
       <div class="carousel-item carousel-item-2">
         <div class="container-fluide">
           <div class="carousel-content float-right">
+            <svg class="carousel-content__svg" width="300" height="378">
+              <polyline points="10,90 10,10 290,10 290,368, 10,368 10,368, 10,368 10,310" fill="none" stroke="#fde428" stroke-width="10" />
+              <polyline points="10,270 10,240" fill="none" stroke="#fde428" stroke-width="10" />
+            </svg>
             <div class="carousel__bord"></div>
             <div class="carousel__rect"></div>
             <h1 class="carousel-content__title">Working of technical capacity</h1>
@@ -100,6 +108,10 @@
       <div class="carousel-item carousel-item-3">
         <div class="container-fluide">
           <div class="carousel-content float-right">
+            <svg class="carousel-content__svg" width="300" height="378">
+              <polyline points="10,90 10,10 290,10 290,368, 10,368 10,368, 10,368 10,310" fill="none" stroke="#fde428" stroke-width="10" />
+              <polyline points="10,270 10,240" fill="none" stroke="#fde428" stroke-width="10" />
+            </svg>
             <div class="carousel__bord"></div>
             <div class="carousel__rect"></div>
             <h1 class="carousel-content__title">Services & Bussines Concept</h1>
@@ -168,17 +180,23 @@
         <p class="subtitle subtitle_center">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
         <div class="row text-left">
           <div class="col-4">
-            <img src="img/workplace.png" alt="student company">
+            <div class="img-inner">
+              <img src="img/workplace.png" alt="student company">
+            </div>
             <h3 class="services__title">Turnaround Consulting</h3>
             <p class="text">Companies dislike the term ‘turnaround consulting’ because it represents failure. The truth is that turnaround consulting represents success.</p>
           </div>
           <div class="col-4">
-            <img src="img/student.png" alt="student">
+            <div class="img-inner">
+              <img src="img/student.png" alt="student">
+            </div>
             <h3 class="services__title">Bonds & Commodities</h3>
             <p class="text">Companies dislike the term ‘turnaround consulting’ because it represents failure. The truth is that turnaround consulting represents success.</p>
           </div>
           <div class="col-4">
-            <img src="img/meeting.png" alt="conversation">
+            <div class="img-inner">
+              <img src="img/meeting.png" alt="conversation">
+            </div>
             <h3 class="services__title">Audit & Assurance</h3>
             <p class="text">Companies dislike the term ‘turnaround consulting’ because it represents failure. The truth is that turnaround consulting represents success.</p>
           </div>
