--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <div id="carouselBanner" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item carousel-item-1 active">
+      <div class="carousel-item carousel-item-1 active carousel-banner">
         <div class="container-fluide">
           <div class="carousel-content float-right">
             <svg class="carousel-content__svg" width="300" height="378">
@@ -91,7 +91,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item carousel-item-2">
+      <div class="carousel-item carousel-item-2 carousel-banner">
         <div class="container-fluide">
           <div class="carousel-content float-right">
             <svg class="carousel-content__svg" width="300" height="378">
@@ -105,7 +105,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item carousel-item-3">
+      <div class="carousel-item carousel-item-3 carousel-banner">
         <div class="container-fluide">
           <div class="carousel-content float-right">
             <svg class="carousel-content__svg" width="300" height="378">
@@ -219,7 +219,7 @@
       <div class="container-fluide">
         <div class="row">
           <div class="col col-img_yellow col-img-left">
-            <p class="col-img__p"><a href=""><img src="img/video.png" alt="people" class="about__img"></a></p>
+            <p class="col-img__p"><a href="#" type="button" data-toggle="modal" data-target="#ModalVideo"><img src="img/video.png" alt="people" class="about__img"></a></p>
           </div>
           <div class="col">
             <h2 class="title">Why  we best Consulting office in london ?</h2>
@@ -344,6 +344,23 @@
               </form>  
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal Video -->
+  <div class="modal fade" id="ModalVideo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Video</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+         <iframe width="100%" height="315px" src="https://www.youtube.com/embed/AH1FN_y8IP8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
