--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       </div>
     </section>
   
-    <section class="block block_blue">
+    <section class="block-form block_blue">
       <div class="container-fluide">
         <div class="row align-items-center">
           <div class="col-9">
